# explauto

./: .buildinfo  .gitignore  .travis.yml  AUTHORS.md  FAQ.html  README.md  __init__.py  about.html  about.rst.BACKUP.3677.html  about.rst.BACKUP.4899.html  about.rst.BASE.3677.html  about.rst.BASE.4899.html  about.rst.LOCAL.3677.html  about.rst.LOCAL.4899.html  about.rst.REMOTE.3677.html  about.rst.REMOTE.4899.html  api.html  experiment.html  explauto.agent.html  explauto.environment.html  explauto.evaluation.html  explauto.experiment.html  explauto.interestmodel.html  explauto.md  explauto.models.html  explauto.sensorimotormodel.html  explauto.utils.html  extra.html  genindex.html  gmminf.py  imle.py  imle.py.old  imle_test.cpp  index.html  installation.html  knownissues.html  learner.py  notebook.html  objects.inv  pool.html  (+12 more)
_modules/: index.html
_sources/: about.rst.BACKUP.3677.txt  about.rst.LOCAL.4899.txt  about.txt  explauto.environment.txt  explauto.interestmodel.txt  explauto.sensorimotormodel.txt  extra.txt  installation.txt  notebook.txt  pool.txt
agent/: __init__.py  agent.py  config.py
data/: data_clean.npy  model.npy
data/baxter/: demo_0_pos  demo_0_speed  demo_3_pos  demo_3_speed
data/torso-trajectoiries/: record_1.npy  record_2.npy  record_3.npy  record_4.npy
doc/: FAQ.rst  Makefile  about.rst  api.rst  conf.py  experiment.rst  explauto.agent.rst  explauto.environment.rst  explauto.experiment.rst  explauto.interestmodel.rst  explauto.models.rst  explauto.sensorimotormodel.rst  explauto.utils.rst  extra.rst  index.rst  installation.rst  knownissues.rst  make.bat
environment/: __init__.py  environment.py  simple_arm.py
environment/3rd_hand/: arm.py  remote.json
environment/diva/: diva.py  readme.txt
environment/pendule/: pendulum.py  simple_lip.py
environment/simple_arm/: __init__.py  simple_arm.py
environment/toys/: __init__.py  discrete_1d_progress.py  hierarchical_mild.py
experiment/: __init__.py  diva_1.py  simple_arm_1.py
explauto/: __init__.py  adaptors.py  exceptions.py
explauto/agent/: __init__.py  agent.py  config.py  motor_primitive.py
explauto/environment/: __init__.py  adapter.py  context_environment.py  dynamic_environment.py  environment.py  modular_environment.py  testcase.py
explauto/evaluation/: evaluation.py
explauto/experiment/: __init__.py  comparison.py  diva_1.py  experiment.py  log.py  pool.py  simple_arm_1.py
explauto/interest_model/: __init__.py  competences.py  discrete_progress.py  gmm_progress.py  interest_model.py  learning_progress.py  mouse_pointer.py  random.py  random_interest.py  riac.py  top_down_density.py  tree.py
explauto/interest_models/: __init__.py  competences.py  interest_model.py  learning_progress.py  random.py
explauto/io/: mouse_pointer.py
explauto/models/: __init__.py  cma.py  dataset.py  dmp.py  gaussian.py  gmminf.py  gmrinf.py  imle.py  imle_model.py  motor_primitive.py  tests.py
explauto/models/IMLEv1.90/: CMakeLists.txt
explauto/models/IMLEv1.90/python/: CMakeLists.txt.tpl  README.md  expert_public.hpp  imle.py  myimle.cpp  myimle.h.tpl
explauto/models/imleSource/demo/: CMakeLists.txt  imleDemo.cpp
explauto/sensorimotor_model/: __init__.py  bayesian_optimisation.py  dataset.py  discrete.py  ilo_gmm.py  ilo_gmr.py  imle.py  learner.py  nearest_neighbor.py  non_parametric.py  sensorimotor_model.py
explauto/sensorimotor_models/: __init__.py  discrete.py  imle.py  non_parametric.py  sm_model.py
explauto/social/: __init__.py  dynamic_attractor.py
explauto/utils/: config.py  density_image.py  ellipsoid.py  observer.py  tracker.py  utils.py
html/: .buildinfo  FAQ.html  about.html  api.html  experiment.html  explauto.agent.html  explauto.environment.html  explauto.evaluation.html  explauto.experiment.html  explauto.interestmodel.html  explauto.sensorimotormodel.html  explauto.utils.html  extra.html  genindex.html  index.html  installation.html  knownissues.html  objects.inv  pool.html  py-modindex.html  search.html  searchindex.js
html/_modules/: index.html
html/_sources/: api.txt  explauto.environment.txt  explauto.evaluation.txt  explauto.experiment.txt  installation.txt
humm/models/: setup.py
humm/robots/: license.md  (+2 more)
imleSource/: CMakeLists.txt  README.txt  compile.py
imleSource/demo/: CMakeLists.txt  imleDemo.cpp
imleSource/imle/: CMakeLists.txt  ILearner.hpp  expert.hpp
imleSource/imle/eigenSerialized/: CMakeLists.txt  EigenSerialized.cpp
imleSource/python/: CMakeLists.txt  Makefile  imle.py  main-python.cpp  myImle.h  myimle.cpp  myimle.h  myimle.h.tpl  test.py
interest_models/: random.py
main/: discrete_curiosity.py
misc/: torso-mac.xml
model/: competence.py  explauto.py  exploration.py  gaussian.py  gmminf.py  i_model.py  motor_primitive.py  sm_model.py
models/: gmminf.py  utils.py
notebook/: 01 Running a basic experiment..ipynb  02 Comparing motor vs goal strategies.ipynb  02 Using specific configurations-Copy0.ipynb  03 Running pool of experiments.ipynb  04  Poppy environment.ipynb  04 Introducing curiosity-driven learning.ipynb  05 Customising configurations, environments and agents.ipynb  0n Poppy exemple.ipynb  3rdHand.ipynb  DivaDMP.ipynb  GMR class test.ipynb  Imle.ipynb  Learning the IK of the arm of a simulated Poppy using Explauto.ipynb  Sensory_context.ipynb  Torso imle.ipynb  agent_test.ipynb  basis_functions.ipynb  clement.npy  comparing_motor_goal_stategies.ipynb  comparing_sensorimotor_models_non_parametric.ipynb  comparison_sensorimotor_models_non_parametric.ipynb  demo-live-imle.ipynb  demo-recording.ipynb  discrete_curiosity.ipynb  discrete_curiosity.py  diva.ipynb  dynamic_attractor-Copy0.ipynb  dynamic_attractor.ipynb  fast_forward_experiment.ipynb  full_tutorial.ipynb  goal_babbling_direct_optimization.ipynb  introducing_curiosity_learning.ipynb  learning_sensorimotor_models.ipynb  learning_with_context.ipynb  learning_with_environment_context.ipynb  learning_with_sensorimotor_context.ipynb  librosa-pyaudio.ipynb  michu-API.ipynb  monte-ta-tete.ipynb  musical_arm.ipynb  (+15 more)
sensorimotor_models/: discrete.py
(+163 files in other folders)
